--- a/package.json
+++ b/package.json
@@ -3,30 +3,36 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "git@github.com:mjhea0/passport-local-express4.git"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mjhea0/passport-local-express4.git"
   },
-  "author" : "__author__",
-  "license" : "MIT",
+  "author": "__author__",
+  "license": "MIT",
   "dependencies": {
+    "async": "^1.5.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
-    "chai" : "~1.8.1",
-    "connect-flash" : "^0.1.1",
-    "mocha" : "~1.14.0",
-    "mongoose" : "^4.4.1",
-    "passport-local" : "^1.0.0",
-    "passport-local-mongoose" : "^1.0.0",
-    "should" : "~2.1.0",
+    "chai": "~1.8.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "mocha": "~1.14.0",
     "mongodb": "~2.0.33",
-    "monk": "~1.0.1"
+    "mongoose": "^4.4.1",
+    "monk": "~1.0.1",
+    "morgan": "~1.6.1",
+    "nodemailer": "^0.7.1",
+    "nodemon": "^1.9.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "should": "~2.1.0"
   }
 }
