--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "mocha": "~1.14.0",
