--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mocha": "~1.14.0",
     "mongodb": "~2.0.33",
     "mongoose": "^4.4.1",
-    "monk": "~1.0.1",
+    "monk": "^1.0.1",
     "morgan": "~1.6.1",
     "nodemailer": "^0.7.1",
     "nodemon": "^1.9.0",
